--- a/ShopDienThoaiAPI/Views/Shop/ConfigDetail.cshtml
+++ b/ShopDienThoaiAPI/Views/Shop/ConfigDetail.cshtml
@@ -5,9 +5,9 @@
     <ul class="list-group list-group-flush mb-4">
         <li class="list-group-item pl-0 pr-0 pt-2 pb-2">
             <b>Brand:</b>
-            <a href="@Url.Action("ShopCategory", "Shop", new { url = Model.PRODUCT.BRAND.BrandURL })">
+            @*<a href="@Url.Action("ShopCategory", "Shop", new { url = Model.PRODUCT.BRAND.BrandURL })">
                 @Model.PRODUCT.BRAND.BrandName
-            </a>
+            </a>*@
         </li>
         <li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>Model:</b> @Model.PRODUCT.ProductName</li>
         <li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>Cpu:</b> @Model.Cpu</li>
