add orderdetail api

--- a/ShopDienThoaiAPI/Views/Shop/ConfigDetail.cshtml
+++ b/ShopDienThoaiAPI/Views/Shop/ConfigDetail.cshtml
@@ -9,7 +9,7 @@
                 @Model.PRODUCT.BRAND.BrandName
             </a>*@
         </li>
-        <li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>Model:</b> @Model.PRODUCT.ProductName</li>
+        @*<li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>Model:</b> @Model.PRODUCT.ProductName</li>*@
         <li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>Cpu:</b> @Model.Cpu</li>
         <li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>OS:</b> @Model.OSName</li>
         <li class="list-group-item pl-0 pr-0 pt-2 pb-2"><b>OS Version:</b> @Model.OSVersion</li>
