--- a/ShopDienThoaiAPI/Areas/Admin/Views/Home/Index.cshtml
+++ b/ShopDienThoaiAPI/Areas/Admin/Views/Home/Index.cshtml
@@ -6,3 +6,60 @@
 
 <h2>Admin Home</h2>
 
+<canvas id="myChart" width="400" height="400"></canvas>
+
+@section scripts{
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.get("@Url.Action("GetData", "Home")", function (data) {
+                console.log(data);
+                const xs = [];
+                const ys = [];
+                for (var i = 0; i < data.length; i++) {
+                    xs.push(data[i].ProductPrice);
+                    ys.push(data[i].OrderDate);
+                }
+                var ctx = document.getElementById('myChart').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: ys,
+                        datasets: [{
+                            label: '# of Votes',
+                            data: xs,
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                });
+            });
+        })
+
+        
+    </script>
+}
