--- a/ShopDienThoaiAPI/Views/Cart/Cart.cshtml
+++ b/ShopDienThoaiAPI/Views/Cart/Cart.cshtml
@@ -21,7 +21,7 @@
 
 <div class="product-cart-area pt-120 pb-130">
     <div class="container">
-        @if (Model.Count() != 0)
+        @if (Model != null)
         {
             int tongsl = 0;
             decimal total = 0, subtotal = 0;
